Add welcome pages

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,3 +1,18 @@
-# Welcome to Nextra
- 
-Hello, world!
+# Welcome to GAntich's Corner of the Web!
+
+**👋 Hello there**! I'm thrilled to have you visit my little corner of the internet. This space is where I express my thoughts, share my insights, and curate a collection of resources that I find valuable. Whether you're here to explore my programming snippets, dive into my bookmarks, or simply connect with a fellow developer, I hope you'll find something that resonates with you.
+
+**📚 Guidelines and Insights**: In the world of coding and design, I've discovered that some principles stand the test of time. I've put together a set of guidelines that have helped me navigate the ever-evolving landscape of technology. Feel free to explore, adopt, or adapt them for your own journey.
+
+**🔖 Bookmarks for the Curious Mind**: Learning never stops, and I'm a firm believer in the power of continuous education. I've compiled a collection of my go-to resources, from insightful articles to mind-expanding tutorials. These bookmarks have been my companions on the path of knowledge, and I hope they'll guide you too.
+
+**✂️ Code Snippets for the Busy Coder**: Life in the tech world can get hectic, and having a reliable set of code snippets can be a real lifesaver. I'm sharing some of my battle-tested code snippets here. They've saved me time and frustration, and I hope they'll do the same for you.
+
+**🌐 Connect with Me**: The beauty of the internet lies in its ability to connect people from all corners of the globe. If you'd like to reach out, share your thoughts, or collaborate on a project, don't hesitate to drop me a message. Let's learn and grow together!
+
+Thank you for stopping by, and I hope you enjoy your time exploring my digital abode. Feel free to make yourself at home, and remember — the journey of a thousand commits begins with a single git init.
+
+Happy coding and exploring!
+
+Cheers,
+G.Antich
